history & Balance page text-overflow fix

--- a/mobile-app-front-end/app/src/app/components/list-view/list-view.component.scss
+++ b/mobile-app-front-end/app/src/app/components/list-view/list-view.component.scss
@@ -20,7 +20,6 @@ span.confirmed-amount {
     font-family: manrope-regular;
     color: #9898A3;
     white-space: nowrap;
-    max-width: 30vw;
     text-overflow: ellipsis;
     overflow: hidden;
 }
@@ -61,7 +60,6 @@ ion-item ion-label {
     margin: 0;
 }
 ion-item ion-label#token-name {
-    max-width: 220px;
     text-overflow: ellipsis;
     font-family: manrope-medium;
 }
@@ -69,10 +67,10 @@ ion-list {
     overflow: scroll;
 }
 div.token-wrapper {
+    max-width: 98%;
     color: var(--ion-color-tertiary);
     display: flex;
     flex-direction: column;
-    max-width: 150px;
 }
 
 .blink_me {
